# app/models/course.rb
@@ -1,0 +1,5 @@
+class Course < ApplicationRecord
+  belongs_to :author
+
+  validates :name, presence: true
+end
